# Python-Package

./: .buildinfo  .coverage  .pre-commit-config.yaml  genindex.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx_doc.yaml  tests.yaml
_modules/: index.html
docs/source/: conf.py  modules.rst
src/package_creation_tutorial/: basic_operations.py  string_ops.py
tests/: test_basic_operations.py  test_string_ops.py
