[project]
name = "package-creation-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "wissalbenothmen",email = "wissal.lpeople@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "package_creation_tutorial", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
